[package]
name = "eth-spv-lib"
version = "0.1.0"
authors = ["Leon <matrix.skygirl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rlp = "0.4.2"
rlp-derive = "0.1.0"
ethereum-types = "0.9.2"
derive_more = "^0.99.2"
sha3 = "0.8"

